--- a/ex1/index.html
+++ b/ex1/index.html
@@ -2,7 +2,7 @@
  <html>
  <head>
  <meta charset="utf-8">
- <title>Ejemplo de acceso el DOM y Eventos</title>
+ <title>Kernel panic</title>
  <script type="text/javascript" src="./app.js"></script>
  </head>
         <body>
